# chatlab

./: LICENSE  pyproject.toml
src/chatlab/: __init__.py  colnames.py  concat_files.py  filter_subset.py  text_search.py  unpack_turns.py  utils.py
src/chatlab/assets/static/: visualize.js  visualize_dark.css  visualize_light.css
src/chatlab/sample_data/: __init__.py
src/chatlab/sample_data/samples/: sample_data.parquet
src/chatlab/visualization/: __init__.py  html_generator.py  resources.py
tests/: sample_data.parquet  testing.ipynb
