[project]
name = "chatlab"
version = "0.1.0"
description = ""
authors = [
    {name = "Eirik Lidsheim",email = "eirik.lidsheim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "chatlab", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
